# labelmerge

./: .gitignore  CLAUDE.md  CLI_DESIGN_PRINCIPLES.md  LICENSE  PYPI_NAME_DECISION.md  README.md  pyproject.toml  semdedup-kickoff.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  researcher.md
.claude/rules/: architecture.md  code-style.md  commits.md  testing.md
.claude/scripts/: gh-prime.py
.github/workflows/: ci.yml  release.yml
src/labelmerge/: __init__.py  _stop_words.py  blocking.py  cache.py  cli.py  components.py  config.py  core.py  jsonpath.py  models.py  naming.py
src/labelmerge/embedders/: __init__.py  litellm.py  openai.py  protocol.py  sentence.py
src/labelmerge/io/: __init__.py  readers.py  writers.py
src/semdedup/: __init__.py  blocking.py  cache.py  cli.py  components.py  config.py  core.py  naming.py  similarity.py
src/semdedup/embedders/: __init__.py  litellm.py  openai.py  precomputed.py  sentence.py
src/semdedup/io/: __init__.py  readers.py  writers.py
tests/: test_cli_flows.py  test_jsonpath.py  test_models.py  test_naming.py  test_readers.py  test_similarity.py  test_stop_words.py
